[package]
name = "rminecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { version = "0.54.0", features = ["all"] }
glm = "0.2.3"
glutin = "0.31.2"
serde = { version = "1.0.196", features = ["derive"] }
shipyard = "0.6.2"
specs = { version = "0.20.0", features = ["derive", "serde"] }
wgpu = "0.19.1"
